implementazioni (da completare) per aggiungere loader alle pagine

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,7 +34,7 @@
                         <input type="text" placeholder="nome" [(ngModel)]="searchName">
                         <input type="text" placeholder="C.F." [(ngModel)]="searchCF">
                         <a href="#" class="button search">&nbsp;</a>
-                        <a href="#" style="float: right" class="button add">cliente</a>
+                        <button style="float: right" class="button add" (click)="goToNuovoCliente()">cliente</button>
                     </div>
                 </div>
             </div>
