--- a/src/app/pages/wizard/wizard.page.html
+++ b/src/app/pages/wizard/wizard.page.html
@@ -44,6 +44,9 @@
                         <div class="scheda-table">
                             <div class="scheda-row">
                                 <div class="item tipologia abitazione"></div>
+                                <div class="item indirizzo" *ngIf="!(immobile.indirizzo && immobile.indirizzo != '')">
+                                    <i>inserire un indirizzo</i>
+                                </div>
                                 <div class="item indirizzo" *ngIf="immobile.indirizzo && immobile.indirizzo != ''">
                                     {{(immobile.indirizzo ? immobile.indirizzo : '') + ', ' + (immobile.civico ? immobile.civico : '') + ', ' + (immobile.citta ? immobile.citta : '') + ' (' + (immobile.provincia ? immobile.provincia: '') +')'}}
                                 </div>
@@ -62,7 +65,7 @@
                             <div class="scheda-table">
                                 <div class="item">
                                     <div class="item-list form">
-                                        <div class="form-item left" style="width: 75%;">
+                                        <div class="form-item left" style="width: 85%;">
                                             <label>Indirizzo</label>
                                             <input type="text" placeholder="" value="" [(ngModel)]="immobile.indirizzo">
                                         </div>
@@ -70,11 +73,11 @@
                                             <label>Civico</label>
                                             <input type="text" placeholder="" value="" [(ngModel)]="immobile.civico">
                                         </div>
-                                        <div class="form-item left" style="width: 55%;">
+                                        <div class="form-item left" style="width: 35%;">
                                             <label>Citt&agrave;</label>
                                             <input type="text" placeholder="" [(ngModel)]="immobile.citta">
                                         </div>
-                                        <div class="form-item right" style="width: 35%;">
+                                        <div class="form-item left" style="width: 15%;">
                                             <label>Cap</label>
                                             <input type="text" placeholder="" [(ngModel)]="immobile.cap">
                                         </div>
@@ -86,12 +89,9 @@
                                             <label>Comune (ISTAT)</label>
                                             <input type="text" placeholder="" [(ngModel)]="immobile.istat_cod">
                                         </div>
-                                        <div class="form-item left " style="width: 5%;">
-                                            <label>&nbsp;</label>
-                                            <button (click)="caricaOmi()" class="button no-icon">C</button>
-                                        </div>
-                                        <div class="form-item left " style="width: 35%;">
-                                            <label>&nbsp;</label>
+                                        <div class="form-item left " style="width: 15%;">
+                                            <label style="width: 100%">&nbsp;</label>
+                                            <button (click)="caricaOmi()" class="button no-icon">cerca</button>
                                         </div>
                                         <div class="form-item left " style="width: 35%;">
                                             <label>OMI</label>
