--- a/src/global.scss
+++ b/src/global.scss
@@ -420,7 +420,7 @@ input:checked + .slider:before {
         background-image: url('/assets/img/icon-add@2x.png');
     }
     &.cliente {
-        background-image: url('/assets/img/icon-cliente@2x.png');
+        background-image: url('/assets/img/icon-client@2x.png');
     }
     &.back {
         background-image: url('/assets/img/icon-back@2x.png');
@@ -641,20 +641,24 @@ input:checked + .slider:before {
             }
             .item-list.form {
                 height: 300px !important;
-                    li {
-                        padding-top: 8px;
-                        padding-bottom: 8px;
-                        &:first-of-type {
-                            border-bottom: 0;
-                            padding-bottom: 10px;
-                        }
-                        span {
-                            font-size: .9em;
-                            .button {
-                                margin-left: 10px;
-                            }
+                &.auto-height {
+                    height : auto !important;
+                    margin-bottom: 10px;
+                }
+                li {
+                    padding-top: 8px;
+                    padding-bottom: 8px;
+                    &:first-of-type {
+                        border-bottom: 0;
+                        padding-bottom: 10px;
+                    }
+                    span {
+                        font-size: .9em;
+                        .button {
+                            margin-left: 10px;
                         }
                     }
+                }
                 h3 {
                     text-align:center;
                     padding-bottom: 30px;
@@ -761,6 +765,9 @@ input:checked + .slider:before {
                 &.cliente {
                     background: url('/assets/img/icon-client@2x.png') no-repeat left center;
                 }
+                &.no-icon {
+                    padding-left: 0;
+                }
             }
             .button:not(:last-of-type) {
                 margin-right: 10px;
@@ -861,6 +868,12 @@ input:checked + .slider:before {
                     &:first-of-type {
                         border-left: solid 1px $grey-highlight;
                         border-radius:  10px 0 0 10px ;
+                    }
+                    &.blank {
+                        width: 100%;
+                        text-align: center;
+                        border-radius: 10px;
+                        border: solid 1px $grey-highlight;
                     }
                     &.immobili {
                         width: 15%;
@@ -1150,7 +1163,28 @@ input:checked + .slider:before {
                     background-position: center;
                     background-image: url('/assets/img/icon-abitazione-big@2x.png') ;
                 }
+                &.parcheggio {
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-image: url('/assets/img/icon-parcheggio-big@2x.png') ;
+                }
+                .magazzino {
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-image: url('/assets/img/icon-magazzino-big@2x.png') ;
+                }
+                &.commerciale {
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-image: url('/assets/img/icon-commerciale-big@2x.png') ;
+                }
+                &.cliente {
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-image: url('/assets/img/icon-client-big@2x.png');
+                }
             }
+            
             &.indirizzo {
                 width: auto;
             }
