--- a/src/global.scss
+++ b/src/global.scss
@@ -1913,3 +1913,30 @@ input:checked + .slider:before {
     }
 
 }
+
+.modal-area {
+    display: none;
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.05)
+}
+
+.modal {
+    width: 400px;
+    margin-left: -200px;
+    top: 30%;
+    left: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+    .item {
+        border: solid 1px $default-border-grey !important;
+        border-radius: 10px !important;
+    }
+    .item-footer {
+        margin-top: 30px;
+        text-align: center;
+    }
+}
