alert class per campi input

--- a/src/app/pages/profilo-utente/profilo-utente.page.html
+++ b/src/app/pages/profilo-utente/profilo-utente.page.html
@@ -49,7 +49,7 @@
                                 <div class="item-list form auto-height">
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Password attuale</label>
-                                        <input type="password">
+                                        <input type="password" >
                                     </div>
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Password nuova</label>
@@ -57,7 +57,7 @@
                                     </div>
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Ripeto password nuova</label>
-                                        <input type="password">
+                                        <input type="password" class="alert">
                                     </div>
                                 </div>
                             </div>
