--- a/src/global.scss
+++ b/src/global.scss
@@ -158,7 +158,15 @@ ul {
         margin: 0 0 5px 15px;
         font-size: .9em;
     }
-    
+    &.alert {
+        width: 100%;
+        text-align: right;
+        font-size: 12px;
+        color: $default-red;
+        font-style: italic;
+        padding-top: 0;
+        padding-right: 10px;
+    }
     .type {
         position: relative;
         span {
