sviluppi su changepassword

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -20,7 +20,7 @@
     <div class="tools">
         <a href="#" class="hints tasks"><span>10</span></a>
         <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="profilo-utente" class="user">{{getUtenteEmail()}}</a>
+        <a href="profilo-utente" class="user" (click)="goToProfiloUtente()">{{getUtenteEmail()}}</a>
     </div>
 </div>
 
