--- a/src/app/pages/profilo-utente/profilo-utente.page.html
+++ b/src/app/pages/profilo-utente/profilo-utente.page.html
@@ -49,15 +49,16 @@
                                 <div class="item-list form auto-height">
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Password attuale</label>
-                                        <input type="password" >
+                                        <input type="password" [(ngModel)]="cambioPasswordRequest.vecchia_password">
                                     </div>
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Password nuova</label>
-                                        <input type="password">
+                                        <input type="password" [(ngModel)]="cambioPasswordRequest.nuova_password">
                                     </div>
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Ripeto password nuova</label>
-                                        <input type="password" class="alert">
+                                        <input type="password" class="alert"
+                                            [(ngModel)]="cambioPasswordRequest.ripeti_password">
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +66,7 @@
                         <div class="scheda-table single-column">
                             <div class="item">
                                 <div class="item-list ">
-                                    <button class="button forward right">Salva</button>
+                                    <button class="button forward right" (click)="salvaNuovaPassword()">Salva</button>
                                 </div>
                             </div>
                         </div>
